--- a/class/hw1_12.md
+++ b/class/hw1_12.md
@@ -10,5 +10,6 @@
 ![p3-3](p3-app.png)
 ![p3-4](p3-chrome.png)
 #####P4: 請將資料庫放入 Heroku PostgreSQL，並能正常顯示  shop_xx, category_xx data。請給予 Heroku DATABASE_URL，截圖要有 Heroku 上 database, shop_xx 名稱及資料。
-
+Heroku_database_url : postgres://rsiuqaahnockfn:3e81cac92db030ea18463bbd38c5c93c1febb6aa1bcbc519c0f51d304e91b950@ec2-52-21-136-176.compute-1.amazonaws.com:5432/d30j7qmalh3a9c
 #####P5: 在 Heroku上能正確執行本作業之路由，請提供 Heroku URL
+https://crown2-1102db-hw.herokuapp.com/crown2_12/shop_12/jackets
